# auto-typer

./: .gitignore  Cargo.toml  README.md  sample.yaml  schema.json
auto-typer-macos/: auto-typer-Bridging-Header.h
auto-typer-macos/auto-typer/: ContentView.swift  auto_typerApp.swift
auto-typer-macos/auto-typer.xcodeproj/: project.pbxproj
auto-typer-macos/auto-typer/Assets.xcassets/AppIcon.appiconset/: Contents.json
cbinding/: Cargo.toml  autotyper.h  test.c
cbinding/src/: lib.rs
cli/: Cargo.toml  schema.json
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  model.rs
src/: cli.rs  main.rs  model.rs
